<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="mainicon">MainIcon</string>
    <string name="weather1">Weather</string>
    <string name="saintp">Moscow</string>
    <string name="day">Saturday</string>
    <string name="_20_c">temp</string>
    <string name="sunny">Sunny</string>
    <string name="wicon">WIcon</string>
    <string name="humidity">humidity</string>
    <string name="_60">60%</string>
    <string name="cloud">wind speed</string>
    <string name="speed">2 м/с</string>
    <string name="feels">feels like</string>
    <string name="humiditycont">humidity</string>
    <string name="cloudss">cloudss</string>
    <string name="bravo">bravo</string>
    <string name="_16_c">16° C</string>
    <string name="rain">ДОЖДЬ</string>
    <string name="_1_pm">1 pm</string>
    <string name="_2_pm">2 pm</string>
    <string name="_3_pm">3 pm</string>
    <string name="cloudy">ОБЛАЧНО</string>
    <string name="_4_pm">4 pm</string>
    <string name="_5_pm">5 pm</string>
    <string name="cloudsss">cloudsss</string>
    <string name="textview_time">textView_time</string>
    <string name="time_text">Time</string>
    <string name="temperature_text">Temperature</string>
</resources>