<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/mainLayout_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="15"
        android:weightSum="100"
        >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/weather1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="50"
            tools:ignore="NestedWeights"
            />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/saintp"
            android:textSize="20sp"
            android:layout_weight="25"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/day"
            android:textSize="20sp"
            android:layout_weight="25"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="50"
        android:weightSum="100">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:clickable="true"
            android:contentDescription="@string/wicon"
            android:src="@mipmap/sunny"
            tools:ignore="NestedWeights"
            tools:srcCompat="@mipmap/sunny"
            android:focusable="true" />



        <TextView
            android:id="@+id/textView17"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="15"
        android:weightSum="100"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:weightSum="100"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/humidity"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                tools:srcCompat="@mipmap/humidity"
                android:contentDescription="@string/humiditycont"
                android:src="@mipmap/humidity"
                />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:weightSum="100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/cloud"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                tools:srcCompat="@mipmap/unnamed"
                android:contentDescription="@string/cloudss"
                android:src="@mipmap/unnamed"
                />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:weightSum="100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/feels"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                tools:srcCompat="@mipmap/bravo"
                android:src="@mipmap/bravo"
                android:contentDescription="@string/bravo" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_main"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />


</LinearLayout>